Winding fix.
- Fixed two instances of components being retrieved unsafely in the Winding Machine.